[workspace]

members = [
    "cfg",
    "cfg-symbol",
    "cfg-classify",
    "cfg-symbol-bit-matrix",
    "cfg-generate",
    "cfg-predict-distance",
    "cfg-predict-sets",
    "cfg-sequence",
    "cfg-history",
    "cfg-examples",
    "cfg-load",
    "cfg-regexp-logic",
]

resolver = "2"

[workspace.dependencies]
miniserde = "0.1"
bit-matrix = "0.9.0"
bit-vec = "0.8"
log = "0.4"
