[package]
name = "cfg-classify-lr"
version = "0.0.1"
edition = "2021"

[dependencies]
cfg-grammar = { version = "0.0.1", path = "../cfg-grammar/" }
cfg-symbol = { version = "0.0.1", path = "../cfg-symbol/" }
cfg-symbol-bit-matrix = { version = "0.0.1", path = "../cfg-symbol-bit-matrix/" }
cfg-predict-sets = { version = "0.0.1", path = "../cfg-predict-sets/" }
cfg-history = { version = "0.0.1", path = "../cfg-history/" }
