[package]
name = "cfg-classify-recursive"
version = "0.0.1"
edition = "2021"

[dependencies]
bit-matrix = "0.8.1"
cfg-grammar = { version = "0.0.1", path = "../cfg-grammar/" }
cfg-symbol = { version = "0.0.1", path = "../cfg-symbol/" }
cfg-symbol-bit-matrix = { version = "0.0.1", path = "../cfg-symbol-bit-matrix/" }
cfg-predict-distance = { version = "0.0.1", path = "../cfg-predict-distance/" }
