[package]
name = "cfg-classify-useful"
version = "0.0.1"
edition = "2021"

[dependencies]
bit-matrix = "0.8.1"
bit-vec = "0.8"
cfg-grammar = { version = "0.0.1", path = "../cfg-grammar/" }
cfg-symbol = { version = "0.0.1", path = "../cfg-symbol/" }
cfg-symbol-bit-matrix = { version = "0.0.1", path = "../cfg-symbol-bit-matrix/" }
