[package]
name = "cfg-classify"
version = "0.1.1"
authors = [ "Peter Blackson <pioczarn@gmail.com>" ]
description = "Library for manipulating context-free grammars."
keywords = ["grammar", "parsing", "language"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/pczarn/cfg/"
repository = "https://github.com/pczarn/cfg/"

[dependencies]
bit-matrix = "0.8.1"
bit-vec = "0.8"
cfg-grammar = { path = "../cfg-grammar/" }
cfg-symbol = { path = "../cfg-symbol/" }
cfg-predict-distance = { path = "../cfg-predict-distance/" }
cfg-predict-sets = { path = "../cfg-predict-sets/", optional = true }
cfg-symbol-bit-matrix = { path = "../cfg-symbol-bit-matrix/" }
cfg-history = { path = "../cfg-history/", optional = true }

[features]
default = []
lr = ["dep:cfg-history"]
ll = ["dep:cfg-predict-sets"]
