[package]
name = "cfg-earley-history"
version = "0.0.1"
edition = "2021"

[dependencies]
cfg-symbol = { version = "0.0", path = "../cfg-symbol/" }
cfg-history = { version = "0.0", path = "../cfg-history/" }
cfg-grammar = { version = "0.0", path = "../cfg-grammar/" }
smallvec = { version = "1.13", features = ["const_generics"], optional = true }
