[package]
name = "cfg-earley"
version = "0.0.1"
edition = "2021"

[dependencies]
bit-matrix = "0.8"
cfg-symbol = { version = "0.0.1", path = "../cfg-symbol/" }
cfg-classify = { version = "0.0.1", path = "../cfg-classify/" }
cfg-grammar = { version = "0.0.1", path = "../cfg-grammar/" }
cfg-sequence = { version = "0.0.1", path = "../cfg-sequence/" }
