[package]
name = "cfg-earley"
version = "0.0.1"
edition = "2021"

authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "Library for manipulating context-free grammars."
keywords = ["grammar", "parsing", "language"]
documentation = "https://docs.rs/cfg/latest/cfg-earley/"
homepage = "https://github.com/pczarn/cfg"
repository = "https://github.com/pczarn/cfg"
license = "Apache-2.0 OR MIT"

[dependencies]
bit-matrix = "0.8"
cfg-symbol = { version = "0.0.1", path = "../cfg-symbol/" }
cfg-classify = { version = "0.0.1", path = "../cfg-classify/" }
cfg-grammar = { version = "0.0.1", path = "../cfg-grammar/" }
cfg-sequence = { version = "0.0.1", path = "../cfg-sequence/" }
