[package]
name = "cfg-generate"
version = "0.0.1"
edition = "2021"

authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "Library for manipulating context-free grammars."
keywords = ["grammar", "parsing", "language"]
documentation = "https://docs.rs/cfg/latest/cfg-generate/"
homepage = "https://github.com/pczarn/cfg"
repository = "https://github.com/pczarn/cfg"
license = "Apache-2.0 OR MIT"

[dependencies]
cfg-symbol = { version = "0.0.1", path = "../cfg-symbol/" }
cfg-grammar = { version = "0.0.1", path = "../cfg-grammar/", optional = true }
cfg-history = { version = "0.0.1", path = "../cfg-history/", optional = true }

# generation
rand = { version = "0.8", optional = true, features = ["small_rng"] }
num = { version = "0.4", optional = true }
rpds = { version = "1.1.0", optional = true }

[features]
weighted = ["dep:rand", "dep:num", "dep:rpds", "dep:cfg-grammar", "dep:cfg-history"]
