[package]
name = "cfg-generate"
version = "0.1.1"
authors = [ "Peter Blackson <pioczarn@gmail.com>" ]
description = "Library for manipulating context-free grammars."
keywords = ["grammar", "parsing", "language"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/pczarn/cfg/"
repository = "https://github.com/pczarn/cfg/"

[dependencies]
cfg-symbol = { path = "../cfg-symbol/" }
cfg-grammar = { path = "../cfg-grammar/", optional = true }
cfg-history = { path = "../cfg-history/", optional = true }

# generation
rand = { version = "0.9", optional = true, features = ["small_rng"] }
num = { version = "0.4", optional = true }
rpds = { version = "1.1.0", optional = true }

[features]
weighted = ["dep:rand", "dep:num", "dep:rpds", "dep:cfg-grammar", "dep:cfg-history"]
