[package]
name = "cfg-grammar"
version = "0.9.0"
edition = "2021"

authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "Library for manipulating context-free grammars."
keywords = ["grammar", "parsing", "language"]
documentation = "https://docs.rs/cfg/latest/cfg/"
homepage = "https://github.com/pczarn/cfg"
repository = "https://github.com/pczarn/cfg"
license = "MIT/Apache-2.0"

[lib]
name = "cfg_grammar"

[dependencies]
bit-vec = "0.7"
cfg-symbol = { path = "../cfg-symbol/" }

# serialize
miniserde = { version = "0.1", optional = true }

[features]
serialize = ["miniserde"]
