[package]
name = "cfg-grammar"
version = "0.0.1"
edition = "2021"

authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "Library for manipulating context-free grammars."
keywords = ["grammar", "parsing", "language"]
documentation = "https://docs.rs/cfg/latest/cfg/"
homepage = "https://github.com/pczarn/cfg"
repository = "https://github.com/pczarn/cfg"
license = "MIT/Apache-2.0"

[lib]
name = "cfg_grammar"

[dependencies]
bit-vec = "0.8"
cfg-symbol = { version = "0.0.1", path = "../cfg-symbol/" }
cfg-history = { version = "0.0.1", path = "../cfg-history/" }
smallvec = { version = "1.13", features = ["const_generics"], optional = true }

# serialize
serde = { version = "1.0", features = ["derive"], optional = true }
miniserde = { version = "0.1", optional = true }

[features]
serde = ["dep:serde", "cfg-symbol/serde", "smallvec/serde"]
miniserde = ["dep:miniserde", "cfg-symbol/miniserde"]
