[package]
name = "cfg-grammar"
version = "0.0.1"
edition = "2021"

authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "Library for manipulating context-free grammars."
keywords = ["grammar", "parsing", "language"]
documentation = "https://docs.rs/cfg/latest/cfg/"
homepage = "https://github.com/pczarn/cfg"
repository = "https://github.com/pczarn/cfg"
license = "MIT/Apache-2.0"

[lib]
name = "cfg_grammar"

[dependencies]
bit-vec = { version = "0.8", features = ["miniserde"] }
cfg-symbol = { version = "0.0.1", path = "../cfg-symbol/" }
cfg-history = { version = "0.0.1", path = "../cfg-history/" }
smallvec = { version = "1.13", features = ["const_generics"], optional = true }
log = "0.4"

# serialize
serde = { version = "1.0", features = ["derive"], optional = true }
miniserde = { workspace = true }

[features]
serde = ["dep:serde", "cfg-symbol/serde", "smallvec/serde", "bit-vec/serde", "cfg-history/serde"]
