[package]
name = "cfg-load"
version = "0.0.1"
edition = "2024"

[dependencies]
cfg-grammar = { version = "0.0.1", path = "../cfg-grammar/" }
cfg-symbol-bit-matrix = { version = "0.0.1", path = "../cfg-symbol-bit-matrix/" }
cfg-sequence = { version = "0.0.1", path = "../cfg-sequence/" }
cfg-symbol = { version = "0.0.1", path = "../cfg-symbol/" }
cfg-history = { version = "0.0.1", path = "../cfg-history/" }
cfg-regexp = { version = "0.0.1", path = "../cfg-regexp/" }
tiny-earley = { version = "0.2", features = ["debug"] }
elsa = { version = "1.11", features = ["indexmap"] }
log = "0.4"
