[package]
name = "cfg-sequence"
version = "0.1.1"
documentation = "https://docs.rs/cfg/latest/cfg-sequence/"
authors = [ "Peter Blackson <pioczarn@gmail.com>" ]
description = "Library for manipulating context-free grammars."
keywords = ["grammar", "parsing", "language"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/pczarn/cfg/"
repository = "https://github.com/pczarn/cfg/"

[dependencies]
cfg-symbol = { workspace = true }
cfg-grammar = { workspace = true }
cfg-history = { version = "0.1.1", path = "../cfg-history/" }

[features]
serde = ["cfg-symbol/serde"]
