[package]
name = "cfg-symbol-bit-matrix"
version = "0.1.0"
authors = [ "Peter Blackson <pioczarn@gmail.com>" ]
description = "Library for manipulating context-free grammars."
keywords = ["grammar", "parsing", "language"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/pczarn/cfg/"
repository = "https://github.com/pczarn/cfg/"

[dependencies]
bit-matrix = { workspace = true }
cfg-symbol = { version = "0.1.0", path = "../cfg-symbol/" }
cfg-grammar = { version = "0.1.0", path = "../cfg-grammar/" }
log = { workspace = true }
