[package]
name = "cfg-symbol"
version = "0.0.1"
edition = "2021"

authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "Library for manipulating context-free grammars."
keywords = ["grammar", "parsing", "language"]
documentation = "https://docs.rs/cfg/latest/cfg/"
homepage = "https://github.com/pczarn/cfg"
repository = "https://github.com/pczarn/cfg"
license = "MIT/Apache-2.0"

[lib]
name = "cfg_symbol"

[dependencies]

# serialize
miniserde = { version = "0.1", optional = true }

[features]
serialize = ["miniserde"]
