[package]
name = "cfg-symbol"
version = "0.0.1"
edition = "2021"

authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "Library for manipulating context-free grammars."
keywords = ["grammar", "parsing", "language"]
documentation = "https://docs.rs/cfg/latest/cfg-symbol/"
homepage = "https://github.com/pczarn/cfg"
repository = "https://github.com/pczarn/cfg"
license = "MIT/Apache-2.0"

[lib]
name = "cfg_symbol"

[dependencies]
# serialize
serde = { version = "1.0", features = ["derive"], optional = true }
miniserde = { version = "0.1", optional = true }
