[package]
name = "cfg-symbol"
version = "0.1.0"
documentation = "https://docs.rs/cfg/latest/cfg-symbol/"
authors = [ "Peter Blackson <pioczarn@gmail.com>" ]
description = "Library for manipulating context-free grammars."
keywords = ["grammar", "parsing", "language"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/pczarn/cfg/"
repository = "https://github.com/pczarn/cfg/"

[lib]
name = "cfg_symbol"

[dependencies]
# serialize
serde = { version = "1.0", features = ["derive"], optional = true }
miniserde = { workspace = true }
nanoserde = { version = "0.2", optional = true }
