[package]
name = "cfg"
version = "0.9.0"
edition = "2021"

authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "Library for manipulating context-free grammars."
keywords = ["grammar", "parsing", "language"]
documentation = "https://docs.rs/cfg/latest/cfg/"
homepage = "https://github.com/pczarn/cfg"
repository = "https://github.com/pczarn/cfg"
license = "Apache-2.0 OR MIT"

[lib]
name = "cfg"

[dependencies]
bit-matrix = "0.8.1"
bit-vec = "0.8"
cfg-symbol = { version = "0.0.1", path = "../cfg-symbol/" }
cfg-grammar = { version = "0.0.1", path = "../cfg-grammar/" }
cfg-classify = { version = "0.0.1", path = "../cfg-classify/", optional = true }
cfg-generate = { version = "0.0.1", path = "../cfg-generate/", optional = true }
cfg-earley-history = { version = "0.0.1", path = "../cfg-earley-history/", optional = true }
cfg-predict-distance = { version = "0.0.1", path = "../cfg-predict-distance/", optional = true }
cfg-predict-sets = { version = "0.0.1", path = "../cfg-predict-sets/", optional = true }
cfg-symbol-bit-matrix = { version = "0.0.1", path = "../cfg-symbol-bit-matrix/", optional = true }
cfg-history = { version = "0.0.1", path = "../cfg-history/", optional = true }
cfg-sequence = { version = "0.0.1", path = "../cfg-sequence/", optional = true }

rand = { version = "0.8", optional = true, features = ["small_rng"] }

# # serialize
# miniserde = { version = "0.1", optional = true }

[dev-dependencies]
test-case = "3.3"

[features]
default = ["cfg-classify", "cfg-generate", "cfg-earley-history", "cfg-predict-sets", "cfg-predict-distance", "cfg-generate", "cfg-sequence", "cfg-history", "cfg-symbol-bit-matrix"]
serde = ["cfg-grammar/serde"]
miniserde = ["cfg-grammar/miniserde"]
ll = ["cfg-classify/cfg-predict-sets"]
weighted-generation = ["cfg-generate/weighted", "cfg-generate", "rand"]
nightly = []
